ATRAS/ThirdParty/Vieworks Imaging Solution 7/SDK/CPP/Include/VwUSB.API.h

			typedef void* VWUSB_HANDLE;
			typedef void* HINTERFACE;
			typedef void* HCAMERA;