ATRAS/ThirdParty/Vieworks Imaging Solution 7/SDK/CPP/Include/VwUSB.Global.h

	enum STREAM_INFO
	{
		STREAM_INFO_NUM_OF_FRAMES_LOST,
		STREAM_INFO_NUM_PACKETS_MISSING
	};
		struct OBJECT_INFO
		{
			void*		pUserPointer;
			void*		pVwCamera;
			OBJECT_INFO()
			{
				pUserPointer = NULL;
				pVwCamera = NULL;
			}
		};
		struct IMAGE_INFO
		{
			VWSDK::RESULT			callbackResult;
			unsigned int			bufferIndex;
			VWSDK::PIXEL_FORMAT		pixelFormat;
			unsigned int			width;
			unsigned int			height;
			UINT64					unTimeStamp;
			UINT					ImageStatus;
			void*				pImage;
		};
		struct CAMERA_INFO_STRUCT
		{
			BOOL				error;
			VWSDK::RESULT				errorResult;
			unsigned int		index;
			char				name[256];
			char				vendor[128];
			char				model[128];
			char				ip[32];
			char				mac[32];

		public:
			CAMERA_INFO_STRUCT()
			{
				error = FALSE;
				errorResult = VWSDK::RESULT_ERROR;
				index = 0;
				// hCam = NULL;
				memset(name, 0, sizeof(name));
				memset(vendor, 0, sizeof(vendor));
				memset(model, 0, sizeof(model));
				memset(ip, 0, sizeof(ip));
				memset(mac, 0, sizeof(mac));
			}
		};
		struct INTERFACE_INFO_STRUCT
		{
			BOOL				error;
			VWSDK::RESULT				errorCause;
			unsigned int		index;
			char				name[256];
		};
typedef void (ImageCallbackFn)(VWSDK::OBJECT_INFO* pObjectInfo, VWSDK::IMAGE_INFO* pImageInfo);
typedef void (DisconnectCallbackFn)(VWSDK::OBJECT_INFO* pObjectInfo, VWSDK::DISCONNECT_INFO tDisconnectInfo);
typedef void (EventControlCallbackFn)( char* pcaEventName, VWSDK::VwGenICam::EVENT_DATA* ptEventData);
typedef void (GeneralEventCallbackFn)( VWSDK::EventType eEventType );